--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
         "@emotion/css": "11.9.0",
         "@emotion/react": "11.9.0",
         "@emotion/styled": "11.8.1",
-        "@leafygreen-ui/leafygreen-provider": "3.1.0",
-        "@leafygreen-ui/mongo-nav": "10.0.1",
+        "@leafygreen-ui/leafygreen-provider": "^3.1.0",
+        "@leafygreen-ui/mongo-nav": "^10.0.1",
         "@mdb/consistent-nav": "1.2.15",
         "@mdb/devcenter-components": "0.1.3",
         "@mdb/flora": "1.1.3",
