--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -37,7 +37,7 @@ jobs:
             - name: Lint
               run: yarn lint
     playwright-tests:
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-20.04
         steps:
             - name: Checkout target branch
               uses: actions/checkout@v2
