--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "@leafygreen-ui/mongo-nav": "10.0.1",
         "@mdb/consistent-nav": "1.2.15",
         "@mdb/devcenter-components": "0.1.3",
-        "@mdb/flora": "1.1.3",
+        "@mdb/flora": "1.2.0-rc.1",
         "@mdx-js/react": "1.6.22",
         "@sentry/nextjs": "7.19.0",
         "@types/react-truncate": "2.3.4",
