--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@mdb/devcenter-components": "0.1.3",
         "@mdb/flora": "1.3.4-rc.0",
         "@mdx-js/react": "1.6.22",
+        "@percy/playwright": "^1.0.4",
         "@sentry/nextjs": "7.19.0",
         "@types/react-truncate": "2.3.4",
         "apollo-link-rest": "0.9.0-rc.1",
