--- a/.github/workflows/playwright-percy.yml
+++ b/.github/workflows/playwright-percy.yml
@@ -1,6 +1,15 @@
 name: Run Playwright/Percy
 on: workflow_call
-
+env:
+    NPM_AUTH: ${{ secrets.ARTIFACTORY_NPM_AUTH }}
+    NPM_EMAIL: ${{ secrets.ARTIFACTORY_NPM_EMAIL }}
+    REALM_API_URL: ${{ secrets.REALM_API_URL }}
+    REALM_SEARCH_URL: ${{ secrets.REALM_SEARCH_URL }}
+    STRAPI_URL: ${{ secrets.STRAPI_DEV_URL }}
+    STRAPI_API_TOKEN: ${{ secrets.STRAPI_API_TOKEN }}
+    DEVHUB_URL: ${{ secrets.DEVHUB_URL }}
+    NEXTAUTH_URL: http://localhost:3000/developer/api/auth/
+    NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
 jobs:
     playwright-tests:
         runs-on: ubuntu-latest
