--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -1,7 +1,7 @@
 name: Pull Request Checks
 on:
     push:
-        branches: [main]
+        branches: [main, mm/test-jest-fix]
     pull_request:
         branches: [main]
 env:
