--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
         "@mdb/devcenter-components": "0.1.3",
         "@mdb/flora": "1.2.0-rc.1",
         "@mdx-js/react": "1.6.22",
+        "@percy/playwright": "^1.0.4",
         "@sentry/nextjs": "7.19.0",
         "@types/react-truncate": "2.3.4",
-        "@percy/playwright": "^1.0.4",
         "apollo-link-rest": "0.9.0-rc.1",
         "axios": "^0.27.2",
+        "emotion-normalize": "^11.0.1",
         "feed": "4.2.2",
         "graphql": "16.2.0",
         "graphql-anywhere": "4.2.7",
