--- a/package.json
+++ b/package.json
@@ -29,12 +29,11 @@
         "@mdb/devcenter-components": "0.1.3",
         "@mdb/flora": "1.2.0-rc.1",
         "@mdx-js/react": "1.6.22",
-        "@percy/playwright": "^1.0.4",
         "@sentry/nextjs": "7.19.0",
         "@types/react-truncate": "2.3.4",
         "apollo-link-rest": "0.9.0-rc.1",
         "axios": "^0.27.2",
-        "emotion-normalize": "^11.0.1",
+        "emotion-normalize": "11.0.1",
         "feed": "4.2.2",
         "graphql": "16.2.0",
         "graphql-anywhere": "4.2.7",
@@ -71,8 +70,9 @@
         "@babel/plugin-transform-react-jsx": "^7.17.3",
         "@emotion/babel-plugin": "11.7.2",
         "@next/bundle-analyzer": "12.0.8",
-        "@percy/cli": "^1.12.0",
+        "@percy/cli": "1.16.0",
         "@playwright/test": "^1.22.2",
+        "@percy/playwright": "1.0.4",
         "@testing-library/jest-dom": "5.16.1",
         "@testing-library/react": "12.1.2",
         "@testing-library/user-event": "14.0.0-beta.11",
