--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
         "@mdb/devcenter-components": "0.1.3",
         "@mdb/flora": "1.2.0-rc.1",
         "@mdx-js/react": "1.6.22",
+        "@percy/playwright": "^1.0.4",
         "@sentry/nextjs": "7.19.0",
         "@types/react-truncate": "2.3.4",
-        "@percy/playwright": "^1.0.4",
         "apollo-link-rest": "0.9.0-rc.1",
         "axios": "^0.27.2",
         "feed": "4.2.2",
@@ -80,8 +80,11 @@
         "@types/react": "17.0.38",
         "@types/sanitize-html": "^2.6.2",
         "@types/stylis": "4.0.2",
+        "@typescript-eslint/eslint-plugin": "^5.46.0",
+        "@typescript-eslint/parser": "^5.46.0",
         "eslint": "8.21.0",
         "eslint-config-next": "12.2.3",
+        "eslint-config-prettier": "^8.5.0",
         "husky": "4.3.8",
         "jest": "27.4.7",
         "lint-staged": "11.1.1",
