--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,12 @@
         "plugin:@typescript-eslint/eslint-recommended",
         "plugin:@typescript-eslint/recommended",
         "prettier"
-    ]
+    ],
+    "rules": {
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            { "ignoreRestSiblings": true }
+        ],
+        "react-hooks/exhaustive-deps": "off"
+    }
 }
