--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "@mdb/devcenter-components": "0.1.3",
         "@mdb/flora": "1.3.4-rc.0",
         "@mdx-js/react": "1.6.22",
-        "@percy/playwright": "^1.0.4",
+        "@percy/playwright": "1.0.4",
         "@sentry/nextjs": "7.19.0",
         "@types/react-truncate": "2.3.4",
         "apollo-link-rest": "0.9.0-rc.1",
@@ -38,6 +38,7 @@
         "feed": "4.2.2",
         "graphql": "16.2.0",
         "graphql-anywhere": "4.2.7",
+        "haversine-distance": "1.2.1",
         "hex-rgb": "4.3.0",
         "html-react-parser": "1.4.11",
         "lodash.debounce": "4.0.8",
