Fix some styles and filtering logic, remove old location search component

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
         "@testing-library/user-event": "14.0.0-beta.11",
         "@types/lodash.debounce": "4.0.7",
         "@types/node": "17.0.12",
+        "@types/pluralize": "^0.0.29",
         "@types/react": "17.0.38",
         "@types/sanitize-html": "^2.6.2",
         "@types/stylis": "4.0.2",
