Fix tests, fix events page styling, filter out past industry events, change filtering logic to facilitate an array of content types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
         "isolatedModules": true,
         "jsx": "preserve",
         "incremental": true,
-        "types": ["sanitize-html"],
+        "types": ["sanitize-html", "google.maps"],
         "jsxImportSource": "theme-ui"
     },
     "rootDir": "src/",
