--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
         "@testing-library/jest-dom": "5.16.1",
         "@testing-library/react": "12.1.2",
         "@testing-library/user-event": "14.0.0-beta.11",
+        "@types/google.maps": "^3.51.0",
         "@types/lodash.debounce": "4.0.7",
         "@types/node": "17.0.12",
         "@types/pluralize": "^0.0.29",
