Change realm search URLs in drone yml to staging env var

--- a/.drone.yml
+++ b/.drone.yml
@@ -23,7 +23,7 @@ steps:
       REALM_API_URL:
         from_secret: REALM_API_URL
       REALM_SEARCH_URL:
-        from_secret: REALM_SEARCH_URL
+        from_secret: REALM_SEARCH_URL_STAGING
       STRAPI_URL:
         from_secret: STRAPI_URL_STAGING
       STRAPI_API_TOKEN:
@@ -212,7 +212,7 @@ steps:
       REALM_API_URL:
         from_secret: REALM_API_URL
       REALM_SEARCH_URL:
-        from_secret: REALM_SEARCH_URL
+        from_secret: REALM_SEARCH_URL_STAGING
       STRAPI_URL:
         from_secret: STRAPI_URL_STAGING
       STRAPI_API_TOKEN:
@@ -352,7 +352,7 @@ steps:
       REALM_API_URL:
         from_secret: REALM_API_URL
       REALM_SEARCH_URL:
-        from_secret: REALM_SEARCH_URL
+        from_secret: REALM_SEARCH_URL_STAGING
       STRAPI_URL:
         from_secret: STRAPI_URL_STAGING
       STRAPI_API_TOKEN:
