--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "@leafygreen-ui/leafygreen-provider": "3.1.0",
         "@leafygreen-ui/mongo-nav": "10.0.1",
         "@mdb/consistent-nav": "1.2.27",
-        "@mdb/devcenter-components": "0.1.3",
+        "@mdb/devcenter-components": "^0.2.0",
         "@mdb/flora": "1.3.4-rc.0",
         "@mdx-js/react": "1.6.22",
         "@percy/playwright": "1.0.4",
