--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "format:write": "prettier --write .",
         "format:check": "prettier --check .",
         "test": "jest --watch",
+        "test:coverage": "jest --coverage",
         "test:e2e": "npx playwright install --with-deps && npx playwright test",
         "test:e2e:visual": "npx @percy/cli exec -- npm run test:e2e"
     },
