[DEVHUB-1631]: Create Reusable onboarding component (#414)
* refactor modals to use context

* code cleanup

* start of personalization modal skeleton

* finish prototyping

* fix test and code cleanup

* cleanup

* upgrade flora

* integrate with topic card, finish all markup and styling

* code review

* finally get unit tests up

* matt review comment

* test to see if this fixes lighthouse test

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "format:write": "prettier --write .",
         "format:check": "prettier --check .",
         "test": "jest --watch",
+        "test:coverage": "jest --coverage",
         "test:e2e": "npx playwright install --with-deps && npx playwright test",
         "test:e2e:visual": "npx @percy/cli exec -- npm run test:e2e"
     },
@@ -27,7 +28,7 @@
         "@leafygreen-ui/mongo-nav": "10.0.1",
         "@mdb/consistent-nav": "1.2.27",
         "@mdb/devcenter-components": "0.2.0",
-        "@mdb/flora": "1.3.4-rc.0",
+        "@mdb/flora": "1.3.5",
         "@mdx-js/react": "1.6.22",
         "@percy/playwright": "1.0.4",
         "@sentry/nextjs": "7.19.0",
