adding personalization env vars

--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -27,6 +27,9 @@ envSecrets:
   STRAPI_URL: devcenter-secrets
   STRAPI_API_TOKEN: devcenter-secrets
   GOOGLE_PLACES_API_KEY: devcenter-secrets
+  REALM_API_KEY: devcenter-secrets
+  PERSONALIZATION_URL: devcenter-secrets
+
 
 autoscaling:
   minReplicas: 2
