--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -29,6 +29,8 @@ envSecrets:
   STRAPI_URL: devcenter-secrets
   STRAPI_API_TOKEN: devcenter-secrets
   GOOGLE_PLACES_API_KEY: devcenter-secrets
+  REALM_API_KEY: devcenter-secrets
+  PERSONALIZATION_URL: devcenter-secrets
 
 autoscaling:
   minReplicas: 4
