Add MSW integration for API mocking

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,5 +22,6 @@
             "error",
             { "ignoreRestSiblings": true }
         ]
-    }
+    },
+    "ignorePatterns": ["mocks/data/*.js"]
 }
