Set CSP headers to allow embedding from *.mongodb.com

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,8 @@
         "@typescript-eslint/no-unused-vars": [
             "error",
             { "ignoreRestSiblings": true }
-        ]
+        ],
+        "@typescript-eslint/no-var-requires": "off"
     },
     "ignorePatterns": ["mocks/data/*.js"]
 }
