Add new env variable

--- a/.drone.yml
+++ b/.drone.yml
@@ -34,6 +34,8 @@ steps:
         from_secret: SENTRY_DSN
       NEXT_IMAGE_HOSTS:
         from_secret: NEXT_IMAGE_HOSTS
+      MONGODB_TV_API_KEY:
+        from_secret: MONGODB_TV_API_KEY
       DEBIAN_FRONTEND: noninteractive
 
   - name: publish-staging
@@ -133,6 +135,8 @@ steps:
         from_secret: SENTRY_DSN
       NEXT_IMAGE_HOSTS:
         from_secret: NEXT_IMAGE_HOSTS
+      MONGODB_TV_API_KEY:
+        from_secret: MONGODB_TV_API_KEY
       DEBIAN_FRONTEND: noninteractive
 
   - name: publish-production
@@ -223,6 +227,8 @@ steps:
         from_secret: SENTRY_DSN
       NEXT_IMAGE_HOSTS:
         from_secret: NEXT_IMAGE_HOSTS
+      MONGODB_TV_API_KEY:
+        from_secret: MONGODB_TV_API_KEY
       DEBIAN_FRONTEND: noninteractive
 
   - name: publish-staging-from-cron
@@ -293,6 +299,8 @@ steps:
         from_secret: SENTRY_DSN
       NEXT_IMAGE_HOSTS:
         from_secret: NEXT_IMAGE_HOSTS
+      MONGODB_TV_API_KEY:
+        from_secret: MONGODB_TV_API_KEY
       DEBIAN_FRONTEND: noninteractive
 
   - name: publish-prod-from-cron
@@ -363,6 +371,8 @@ steps:
         from_secret: SENTRY_DSN
       NEXT_IMAGE_HOSTS:
         from_secret: NEXT_IMAGE_HOSTS
+      MONGODB_TV_API_KEY:
+        from_secret: MONGODB_TV_API_KEY
       DEBIAN_FRONTEND: noninteractive
 
   - name: publish-preview
