--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -13,6 +13,7 @@ env:
     STRAPI_API_TOKEN: ${{ secrets.STRAPI_API_TOKEN }}
     NEXTAUTH_URL: http://localhost:3000/developer/api/auth/
     NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+    MONGODB_TV_API_KEY: ${{ secrets.MONGODB_TV_API_KEY }}
 jobs:
     check-formatting-and-lint:
         runs-on: ubuntu-latest
