--- a/environments/preview.yaml
+++ b/environments/preview.yaml
@@ -26,6 +26,9 @@ envSecrets:
   SENTRY_DSN: devcenter-secrets
   STRAPI_URL: devcenter-secrets
   STRAPI_API_TOKEN: devcenter-secrets
+  CS_BRANCH: devcenter-secrets
+  CS_DELIVERY_TOKEN: devcenter-secrets
+  CS_GRAPHQL_URL: devcenter-secrets
   GOOGLE_PLACES_API_KEY: devcenter-secrets
   BACKEND_API_KEY: devcenter-secrets
 
