--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -13,6 +13,9 @@ env:
     STRAPI_API_TOKEN: ${{ secrets.STRAPI_API_TOKEN }}
     NEXTAUTH_URL: http://localhost:3000/developer/api/auth/
     NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+    CS_BRANCH: ${{secrets.CS_BRANCH}}
+    CS_DELIVERY_TOKEN: ${{secrets.CS_DELIVERY_TOKEN}}
+    CS_GRAPHQL_URL: ${{secrets.CS_GRAPHQL_URL}}
 jobs:
     check-formatting-and-lint:
         runs-on: ubuntu-latest
