Revert "Revert "Merge pull request #484 from mongodb/DEVHUB-1763""
This reverts commit 973c7e820b86fe4acaf9c16a43340f373ac6d3a8.

--- a/.drone.yml
+++ b/.drone.yml
@@ -40,6 +40,8 @@ steps:
         from_secret: SENTRY_DSN
       NEXT_IMAGE_HOSTS:
         from_secret: NEXT_IMAGE_HOSTS
+      MONGODB_TV_API_KEY:
+        from_secret: MONGODB_TV_API_KEY
       DEBIAN_FRONTEND: noninteractive
 
   - name: publish-staging
@@ -145,6 +147,8 @@ steps:
         from_secret: SENTRY_DSN
       NEXT_IMAGE_HOSTS:
         from_secret: NEXT_IMAGE_HOSTS
+      MONGODB_TV_API_KEY:
+        from_secret: MONGODB_TV_API_KEY
       DEBIAN_FRONTEND: noninteractive
 
   - name: publish-production
@@ -241,6 +245,8 @@ steps:
         from_secret: SENTRY_DSN
       NEXT_IMAGE_HOSTS:
         from_secret: NEXT_IMAGE_HOSTS
+      MONGODB_TV_API_KEY:
+        from_secret: MONGODB_TV_API_KEY
       DEBIAN_FRONTEND: noninteractive
 
   - name: publish-staging-from-cron
@@ -317,6 +323,8 @@ steps:
         from_secret: SENTRY_DSN
       NEXT_IMAGE_HOSTS:
         from_secret: NEXT_IMAGE_HOSTS
+      MONGODB_TV_API_KEY:
+        from_secret: MONGODB_TV_API_KEY
       DEBIAN_FRONTEND: noninteractive
 
   - name: publish-prod-from-cron
@@ -393,6 +401,8 @@ steps:
         from_secret: SENTRY_DSN
       NEXT_IMAGE_HOSTS:
         from_secret: NEXT_IMAGE_HOSTS
+      MONGODB_TV_API_KEY:
+        from_secret: MONGODB_TV_API_KEY
       DEBIAN_FRONTEND: noninteractive
 
   - name: publish-preview
