--- a/.drone.yml
+++ b/.drone.yml
@@ -4,9 +4,18 @@ kind: pipeline
 type: kubernetes
 name: build-devcenter-staging
 
+resources:
+  requests:
+    cpu: 10000
+    memory: 8000MiB
+
 steps:
   - name: build
     image: node:16.16.0-slim
+    resources:
+      limits:
+        cpu: 8000
+        memory: 6000MiB
     commands:
     - apt-get -y update
     - apt-get -y install --no-install-recommends ca-certificates
