--- a/.drone.yml
+++ b/.drone.yml
@@ -11,7 +11,7 @@ resources:
 
 steps:
   - name: build
-    image: node:16.16.0-slim
+    image: node:16.13-alpine3.14
     resources:
       limits:
         cpu: 800
