--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "unist-util-visit": "2.0.3"
     },
     "devDependencies": {
+        "@contentstack/live-preview-utils": "^1.3.2",
         "@emotion/babel-plugin": "11.7.2",
         "@next/bundle-analyzer": "12.0.8",
         "@percy/cli": "1.20.3",
