--- a/package.json
+++ b/package.json
@@ -73,10 +73,11 @@
         "stylis": "4.1.2",
         "swr": "1.2.1",
         "theme-ui": "0.13.1",
-        "unist-util-visit": "2.0.3"
+        "unist-util-visit": "2.0.3",
+        "@contentstack/live-preview-utils": "^1.3.2",
+        "contentstack": "^3.17.1"
     },
     "devDependencies": {
-        "@contentstack/live-preview-utils": "^1.3.2",
         "@emotion/babel-plugin": "11.7.2",
         "@next/bundle-analyzer": "12.0.8",
         "@percy/cli": "1.20.3",
