--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@types/react-truncate": "2.3.4",
         "apollo-link-rest": "0.9.0-rc.1",
         "axios": "0.27.2",
+        "cross-fetch": "3.1.6",
         "dotenv": "16.0.3",
         "emotion-normalize": "11.0.1",
         "feed": "4.2.2",
