--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@apollo/client": "3.5.7",
+        "@contentstack/live-preview-utils": "1.3.2",
         "@emotion/css": "11.9.0",
         "@emotion/react": "11.9.0",
         "@emotion/styled": "11.8.1",
@@ -39,6 +40,7 @@
         "@types/react-truncate": "2.3.4",
         "apollo-link-rest": "0.9.0-rc.1",
         "axios": "0.27.2",
+        "contentstack": "3.17.1",
         "cross-fetch": "3.1.6",
         "dotenv": "16.0.3",
         "emotion-normalize": "11.0.1",
@@ -74,9 +76,7 @@
         "stylis": "4.1.2",
         "swr": "1.2.1",
         "theme-ui": "0.13.1",
-        "unist-util-visit": "2.0.3",
-        "@contentstack/live-preview-utils": "^1.3.2",
-        "contentstack": "^3.17.1"
+        "unist-util-visit": "2.0.3"
     },
     "devDependencies": {
         "@emotion/babel-plugin": "11.7.2",
